# oxylus-server

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  compose.yaml  manage.py  pyproject.toml  run.sh
conf/: plugins.yaml
ox_server/: asgi.py  manage.py  urls.py  wsgi.py
ox_server/settings/: __init__.py  default.yaml  dev.py
scripts/: dev.sh  logo.txt  runtime.Dockerfile
scripts/conf/: nginx.conf
